<resources>
    <string name="app_name">RouteApp</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="car">Car</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="TODO">TODO</string>

</resources>